# remotia

./: .gitmodules  Cargo.toml
examples/configurable_client/: main.rs
examples/pixels_example/: main.rs
examples/remvsp_client/: main.rs
examples/remvsp_server/: main.rs
examples/silo_client/: main.rs
examples/silo_server/: main.rs
examples/srt_client/: main.rs
examples/srt_server/: main.rs
examples/webrtc_client/: main.rs
examples/webrtc_server/: main.rs
remotia/: Cargo.toml
remotia-buffer-utils/: Cargo.toml
remotia-buffer-utils/src/: lib.rs
remotia-core-capturers/src/: scrap.rs
remotia-core-loggers/: Cargo.toml
remotia-core-loggers/src/: lib.rs  printer.rs  stats.rs
remotia-core-renderers/src/: beryllium.rs
remotia-ffmpeg-codecs/: Cargo.toml
remotia-ffmpeg-codecs/src/: h264.rs  h264rgb.rs  h265.rs  lib.rs
remotia-ffmpeg-codecs/src/decoders/: h264.rs  h265.rs  mod.rs  vp9.rs
remotia-ffmpeg-codecs/src/decoders/utils/: mod.rs  yuv2bgr.rs
remotia-ffmpeg-codecs/src/encoders/: h264.rs  h265.rs  libvpx_vp9.rs  mod.rs  vp9.rs  x264.rs  x265.rs
remotia-ffmpeg-codecs/src/encoders/asynchronous/encoders/: h264.rs
remotia-ffmpeg-codecs/src/encoders/frame_builders/: yuv420p.rs
remotia-profilation-utils/src/time/: add.rs  (+1 more)
remotia-samples/: Cargo.toml
remotia-srt/src/: receiver.rs  sender.rs
remotia/src/: error.rs  lib.rs  traits.rs  types.rs
scripts/: start_xvfb.sh
scripts/network/: simulate_packet_loss_low.sh
src/client/: error.rs  mod.rs
src/common/: mod.rs  window.rs
src/server/: error.rs  mod.rs  traits.rs  types.rs
(+98 files in other folders)
