[package]
name = "remotia-ffmpeg-codecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsmpeg = "0.7.0"
env_logger = "0.9.0"
log = "0.4.14"

async-trait = "0.1.51"
bytes = "1.1.0"

cstr = "0.2.9"

remotia = { path = "../remotia/" }   
